      least specific (bz #997)
    * A fresh install of a group will cause all of its contained components 
      to be installed or upgraded as well, without reference to what is 
      currently installed on your system -- no trove will be skipped because
      it is referenced by other troves on your system but not installed.

  o Server Changes:
    * Removed the ability for the server to log updates to its contents
      store (mirroring has made this capability obsolete)
    * logFile configuration directive now logs all XML calls
    * Split user management out from core authorization object
    * All user management calls are based on user and group names now
    * The user management web interface for the repository now allows
      the administrator to enable and disable mirroring for groups

  o Bug Fixes:
    * Conary will not traceback if you try to update to a trove with a name
      that matches a filesystem path that you don't have access to (bz #1010).
    * Conary will not raise an exception if a standard config file (~/.conaryrc,
      for example) exists but is not accessible.
    * cvc no longer allows . and .. to be added to source troves (bz #1014)
    * cvc remove handles removing directories (bz #1014)
    * conary rollback no longer tracebacks if you do not have write access to
      the conary database.
    * deeply shadowed versions would fail when performing some version 
      operations.  This caused, for example, local cooks of shadowed troves
      to fail.
    * using loadInstalled with a multiarch trove no longer tracebacks (bz #1039)

Changes in 1.0.13:
  o Client Changes:
    * A new "conary migrate" command for updating troves has been
      added.  "conary migrate" is useful for circumstances when you
      want to update the software state on a system to be synchronized
      with the default state of a group.  To do this, "conary migrate"
      calculates the changeset required to: 1) update the trove (if an